Fix the space issue with course list on mobile

--- a/src/app/components/our-courses/our-courses.component.scss
+++ b/src/app/components/our-courses/our-courses.component.scss
@@ -13,7 +13,7 @@
 
 .mat-expansion-panel-header {
   font-size: 1.25em;       /* Increase font size for the header */
-  padding: 35px;          /* Add padding for better spacing */
+  padding: 75px;          /* Add padding for better spacing */
 }
 
 .course-header {
